				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================
2010/06/01
	* Rev. 14325 Fixed Dark Shadow having Nydhoggr's Shadow's MVP exp reward. (Bugreport:4247) [L0ne_W0lf]
	* Corrected the races for Dark Pinguicula and Ancient Tree. (bugreport:4265)
2010/05/31
	* Rev. 14321 Several updates to the name field in the item_db to follow iRO display names, minus some typos. [L0ne_W0lf]
	* Rev. 14320 Added a series of new items (commented out) and several missing hats. And there's still more to add. [L0ne_W0lf]
2010/05/30
	* Added a missing newline causing issues. [Paradox924X]
2010/05/25
	* Rev. 14306 Added some items from 12.1, 13.1. and 13.2 to item_trade. [L0ne_W0lf]
	* Added the 24 hour time limit on the quests 2182 and 2185.
2010/05/20
	* Rev. 14298 Lots of updates. Mostly mob related. [L0ne_W0lf]
	- Added known stats and drops for 13.2 monsters.
	- Added custom skills and mobchat for 13.2 mobs.
	- Added known stats for Brasilis Mobs.
	- Added new quest entries, and updated some old ones.
	- Removed Itemskill from Large_spray_of_flowers.
	- Added known names and ids for more mobs.
	- Added homunculus IDs to homun database as placeholders.
	- Added skill ids for 3rd jobs to skill_db as placeholders.
2010/04/30
	* Rev. r14293 Updates and additions, bugfixes. [L0ne_W0lf]
	* Updated some information for new pet feed/taming items.
	* Added some of the new maps up to episode 13.3 (El Discastes)
	* Updated the bonuses for Lunakaligo to official. (bugreport:4149)
	* Changed the the autbonus type forNaga Scale Armor. (bugreport:4151)
	* Fixed bonuses for Kieger Fumma and Flamberge. (bugreport:4181)
	* Changed Cordial bonus on Petite Pet to AspdRate. (bugreport:4184)
2010/03/23